some issue fixed

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,5 @@
 MONGO_URI=mongodb+srv://abrarrakin151:e1YtmqE1tqMTbvG1@cluster0.dtxcui5.mongodb.net/products?retryWrites=true&w=majority&appName=Cluster0
+
+# STORE_ID=devas682b426168bfa
+# STORE_PASSWORD=devas682b426168bfa@ssl
+# IS_LIVE=false
